Добавляет разметку окна в футере

--- a/index.html
+++ b/index.html
@@ -502,6 +502,13 @@
             </li>
           </ul>
         </div>
+        <form action="">
+          <h2>Подпишитесь на рассылку</h2>
+          <label for="">
+            <input type="" placeholder="E-mail" />
+          </label>
+          <button>Подписаться</button>
+        </form>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
