--- a/portfolio.html
+++ b/portfolio.html
@@ -384,6 +384,23 @@
             </li>
           </ul>
         </div>
+        <form name="mail-form" class="mail-form" autocomplete="on">
+          <h2>Подпишитесь на рассылку</h2>
+          <label for="email" class="mail-label">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="mail-input"
+            />
+          </label>
+          <button type="submit" class="mail-send">
+            Подписаться
+            <svg class="mail-icon">
+              <use href="./images/symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
