--- a/index.html
+++ b/index.html
@@ -105,43 +105,60 @@
                 <h2>Оставьте свои данные, мы вам перезвоним</h2>
                 <ul>
                   <li>
-                    <label for="user-name">
+                    <label for="user-name" class="form">
                       <p>Имя</p>
-                      <input
-                        class="form-input"
-                        type="text"
-                        name="user-name"
-                        placeholder=""
-                        id="user-name"
-                      />
+                      <div class="form-label">
+                        <input
+                          class="form-input"
+                          type="text"
+                          name="user-name"
+                          id="user-name"
+                        />
+                        <svg class="form-icon" width="15" height="15">
+                          <use
+                            href="./images/symbol-defs.svg#icon-person"
+                          ></use>
+                        </svg>
+                      </div>
                     </label>
                   </li>
                   <li>
-                    <label for="phone_number">
+                    <label for="phone_number" class="form">
                       <p>Телефон</p>
-                      <input
-                        class="form-input"
-                        type="tel"
-                        name="phone_number"
-                        placeholder=""
-                        id="phone_number"
-                      />
+                      <div class="form-label">
+                        <input
+                          class="form-input"
+                          type="tel"
+                          name="phone_number"
+                          id="phone_number"
+                        />
+                        <svg class="form-icon" width="15" height="15">
+                          <use
+                            href="./images/symbol-defs.svg#icon-telefone"
+                          ></use>
+                        </svg>
+                      </div>
                     </label>
                   </li>
                   <li>
-                    <label for="email">
+                    <label for="email" class="form">
                       <p>Почта</p>
-                      <input
-                        class="form-input"
-                        type="email"
-                        name="email"
-                        id="email"
-                      />
+                      <div class="form-label">
+                        <input
+                          class="form-input"
+                          type="email"
+                          name="email"
+                          id="email"
+                        />
+                        <svg class="form-icon" width="15" height="15">
+                          <use href="./images/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                      </div>
                     </label>
                   </li>
 
                   <li>
-                    <label for="feedback">
+                    <label for="feedback" class="form">
                       <p>Комментарий</p>
                       <textarea
                         class="form-input"
@@ -154,13 +171,19 @@
                     </label>
                   </li>
                 </ul>
-                <label for="agreement" class="agreement">
+                <label for="agreement" class="agreement" class="form">
                   <input
                     class="agreement-check visually-hidden"
                     type="checkbox"
                     name="agreement"
                     id="agreement"
                   />
+                  <svg class="icon-not-check" width="15" height="15">
+                    <use href="./images/symbol-defs.svg#icon-not-check"></use>
+                  </svg>
+                  <svg class="icon-check" width="15" height="15">
+                    <use href="./images/symbol-defs.svg#icon-check"></use>
+                  </svg>
                   <span class="agreement-text">
                     Соглашаюсь с рассылкой и принимаю
                     <a href="#"> Условия договора</a>
