--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-tehnocr.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Ноутбук"
                   />
@@ -133,7 +133,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-poster.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Баскетболисты с мячом"
                   />
@@ -156,7 +156,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-restor.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Приложение для ресторана"
                   />
@@ -179,7 +179,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-prime.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Студийные наушники"
                   />
@@ -202,7 +202,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-box.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Две коробки"
                   />
@@ -225,7 +225,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-border.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Монитор компьютера"
                   />
@@ -248,7 +248,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-edition.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Разворот книги"
                   />
@@ -271,7 +271,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-lab.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Бумажная этикетка"
                   />
@@ -294,7 +294,7 @@
                 <div class="overley-box">
                   <img
                     src="./images/img-busines.jpg"
-                    width="100%"
+                    width="370"
                     height="294"
                     alt="Печатают на ноутбуке"
                   />
@@ -386,7 +386,7 @@
         </div>
         <form name="mail-form" class="mail-form" autocomplete="on">
           <h2>Подпишитесь на рассылку</h2>
-          <label for="email" class="mail-label">
+          <label class="mail-label">
             <input
               type="email"
               name="email"
