Добавляет марджин в формах

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   </li>
 
                   <li>
-                    <label for="feedback">
+                    <label for="feedback" class="feedback">
                       <span class="form-text">Комментарий</span>
                       <textarea
                         class="form-input"
